--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -330,6 +330,15 @@ body {
   size: A4 landscape;
 }
 
+.particle_canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -3;
+}
+
 .loading_section {
   position: absolute;
   top: 0;
