--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -288,4 +288,13 @@ body {
   size: A4 landscape;
 }
 
+.particle_canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -3;
+}
+
 @import "./loading";
