--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -11,7 +11,7 @@
   --primary: #f8f8f8;
   --secondary: #d1d1d1;
   --highlight: #41ead4;
-  --card: #ffffff08;
+  --card: #141712;
   --icon-bg: #9e6e6e1a;
   --icon-bg-hover: #ffffff1c;
 }
@@ -196,6 +196,7 @@ body {
 .main_card .container .projects .project:hover {
   -webkit-box-shadow: 0 0.3px 0.5px rgba(0, 0, 0, 0.011), 0 0.8px 1.2px rgba(0, 0, 0, 0.016), 0 1.3px 2px rgba(0, 0, 0, 0.019), 0 1.9px 3px rgba(0, 0, 0, 0.022), 0 2.8px 4.3px rgba(0, 0, 0, 0.025), 0 3.9px 6px rgba(0, 0, 0, 0.028), 0 5.5px 8.5px rgba(0, 0, 0, 0.031), 0 8px 12.4px rgba(0, 0, 0, 0.034), 0 12.4px 19.1px rgba(0, 0, 0, 0.039), 0 22px 34px rgba(0, 0, 0, 0.05);
           box-shadow: 0 0.3px 0.5px rgba(0, 0, 0, 0.011), 0 0.8px 1.2px rgba(0, 0, 0, 0.016), 0 1.3px 2px rgba(0, 0, 0, 0.019), 0 1.9px 3px rgba(0, 0, 0, 0.022), 0 2.8px 4.3px rgba(0, 0, 0, 0.025), 0 3.9px 6px rgba(0, 0, 0, 0.028), 0 5.5px 8.5px rgba(0, 0, 0, 0.031), 0 8px 12.4px rgba(0, 0, 0, 0.034), 0 12.4px 19.1px rgba(0, 0, 0, 0.039), 0 22px 34px rgba(0, 0, 0, 0.05);
+  margin-bottom: 20px;
 }
 
 .main_card .container .projects .project a {
@@ -336,7 +337,13 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -3;
+  opacity: 0.2;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
+}
+
+.particle_canvas:hover {
+  opacity: 1;
 }
 
 .loading_section {
