--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -11,7 +11,7 @@
   --primary: #f8f8f8;
   --secondary: #d1d1d1;
   --highlight: #41ead4;
-  --card: #ffffff08;
+  --card: #141712;
   --icon-bg: #9e6e6e1a;
   --icon-bg-hover: #ffffff1c;
 }
@@ -161,6 +161,7 @@ body {
             0 8px 12.4px rgba(0, 0, 0, 0.034),
             0 12.4px 19.1px rgba(0, 0, 0, 0.039),
             0 22px 34px rgba(0, 0, 0, 0.05);
+          margin-bottom: 20px;
         }
         a {
           display: block;
@@ -294,7 +295,11 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -3;
+  opacity: 0.2;
+  transition: 0.6s ease;
+  &:hover {
+    opacity: 1;
+  }
 }
 
 @import "./loading";
