--- a/src/Styles/style.scss
+++ b/src/Styles/style.scss
@@ -21,7 +21,7 @@
   --primary: #f8f8f8;
   --secondary: #d1d1d1;
   --highlight: #ffb703;
-  --card: #ffffff08;
+  --card: #0a374d;
   --icon-bg: #012030d3;
   --icon-bg-hover: #012030;
 }
