--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -196,7 +196,6 @@ body {
 .main_card .container .projects .project:hover {
   -webkit-box-shadow: 0 0.3px 0.5px rgba(0, 0, 0, 0.011), 0 0.8px 1.2px rgba(0, 0, 0, 0.016), 0 1.3px 2px rgba(0, 0, 0, 0.019), 0 1.9px 3px rgba(0, 0, 0, 0.022), 0 2.8px 4.3px rgba(0, 0, 0, 0.025), 0 3.9px 6px rgba(0, 0, 0, 0.028), 0 5.5px 8.5px rgba(0, 0, 0, 0.031), 0 8px 12.4px rgba(0, 0, 0, 0.034), 0 12.4px 19.1px rgba(0, 0, 0, 0.039), 0 22px 34px rgba(0, 0, 0, 0.05);
           box-shadow: 0 0.3px 0.5px rgba(0, 0, 0, 0.011), 0 0.8px 1.2px rgba(0, 0, 0, 0.016), 0 1.3px 2px rgba(0, 0, 0, 0.019), 0 1.9px 3px rgba(0, 0, 0, 0.022), 0 2.8px 4.3px rgba(0, 0, 0, 0.025), 0 3.9px 6px rgba(0, 0, 0, 0.028), 0 5.5px 8.5px rgba(0, 0, 0, 0.031), 0 8px 12.4px rgba(0, 0, 0, 0.034), 0 12.4px 19.1px rgba(0, 0, 0, 0.039), 0 22px 34px rgba(0, 0, 0, 0.05);
-  margin-bottom: 20px;
 }
 
 .main_card .container .projects .project a {
@@ -301,6 +300,10 @@ body {
     width: 19px;
     height: 19px;
   }
+}
+
+.hide {
+  display: none !important;
 }
 
 ::-moz-selection {
